# personal-data-hub

./: .env.example  .gitignore  README.md  ai.env.example  ecosystem.config.js  file.env.example  login.env.example  pm2-dev.bat  port.env.example  setup-ports.js  start-dev.bat  start-dev.sh  start-pm2.js  test-loading-overlay-fix.md
backend/: .env.example  .gitignore  db.env.example  package.json  server.js  test_system_prompt.js
backend/config/: config.js  database.js  env.js
backend/controllers/: aiChatHistoryController.js  aiController.js  aiPromptController.js  aiRoleController.js  aiSettingsController.js  attachmentController.js  authController.js  customPageController.js  documentController.js  documentVersionController.js  quoteController.js  serverSettingsController.js  themeColorController.js  transparencyController.js  wallpaperController.js
backend/middlewares/: requireAttachmentAuth.js  requireAuth.js  requireCsrf.js
backend/models/: AIChatHistory.js  AIPrompt.js  AIRole.js  Attachment.js  AuthSession.js  CustomPage.js  Document.js  DocumentVersion.js  Quote.js  Wallpaper.js
backend/mongodb-compose/: .env.example  docker-compose.yml.example
backend/routes/: ai.js  attachments.js  auth.js  customPages.js  (+6 more)
docs/: AI注入策略与协议.md  AI配置说明.md  HTML笔记如何使用后端托管依赖.md  design-philosophy.md  调用后端托管Animate.css依赖的html例子.md
frontend/: .env.example  .eslintrc.json  package.json  tsconfig.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: gateway.rs  lib.rs  local_data.rs  main.rs
(+188 files in other folders)
